# paging-calculator

./: CHANGELOG.md  Cargo.toml  README.md  test_cli.sh
.github/workflows/: dependabot-auto-merge.yml  qa.yml  rust.yml
src/: addr_width.rs  cli.rs  main.rs  page_table_index.rs  paging_info.rs  print.rs
test_res/: 0xdeadbeef_x86.stdout.txt  0xdeadbeef_x86_64.stdout.txt  0xdeadbeef_x86_64_5level.stdout.txt  0xdeadbeef_x86_pae.stdout.txt
