[package]
name = "paging-calculator"
description = """
CLI utility that helps you to calculate indices into the page table from a
virtual address. The tool knows multiple paging implementations, such as x86,
x86 with PAE, x86_64 and x86_64 with a 5-level page table.
"""
version = "0.4.0"
edition = "2021"
keywords = ["paging", "page-table"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/paging-calculator"
repository = "https://github.com/phip1611/paging-calculator"
documentation = "https://docs.rs/paging-calculator"
exclude = [
    ".github"
]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.atty]
version = "0.2"

[dependencies.derive_more]
version = "2.0"
default-features = false
features = [
    "display"
]

[dependencies.thiserror]
version = "2.0"
default-features = false
features = [
    "std"
]

[dependencies.nu-ansi-term]
version = "0.50"

[dependencies.clap]
version = "4.5"
features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "unicode",
    "usage",
    "wrap_help",
]
